[package]
name = "kuyfi_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Crucial: esto genera el binario .wasm para la blockchain

[dependencies]
soroban-sdk = "25.3.0"  # Conecta tu código con la red Stellar

[profile.release]
opt-level = "z"
overflow-checks = true  # Regla de seguridad matemática activada